# acn-eval-agents

./: .pre-commit-config.yaml  README.md  e2b_template.md  pyproject.toml
.github/workflows/: docs.yml  unit_tests.yml
DESIGN/agent-bootcamp-accentureone-acnonepm/agent-bootcamp-accentureone-acnonepm/: .env.example  LICENSE  README.md  e2b.Dockerfile  pyproject.toml
DESIGN/agent-bootcamp-accentureone-acnonepm/agent-bootcamp-accentureone-acnonepm/.github/workflows/: code_checks.yml
DESIGN/agent-bootcamp-accentureone-acnonepm/agent-bootcamp-accentureone-acnonepm/data/: README.md  cfia_recalls.json  culinary_agent_queries_200_with_ids.csv  eval_query.csv
DESIGN/agent-bootcamp-accentureone-acnonepm/agent-bootcamp-accentureone-acnonepm/src/: prompts.py
DESIGN/agent-bootcamp-accentureone-acnonepm/agent-bootcamp-accentureone-acnonepm/src/1_basics/1_react_rag/: README.md  cli.py
DESIGN/agent-bootcamp-accentureone-acnonepm/agent-bootcamp-accentureone-acnonepm/src/2_frameworks/1_react_rag/: README.md  app.py  cli.py
DESIGN/agent-bootcamp-accentureone-acnonepm/agent-bootcamp-accentureone-acnonepm/src/2_frameworks/2_multi_agent/: README.md  fan_out.py  verbose.py
DESIGN/agent-bootcamp-accentureone-acnonepm/agent-bootcamp-accentureone-acnonepm/src/2_frameworks/3_code_interpreter/: app.py
DESIGN/agent-bootcamp-accentureone-acnonepm/agent-bootcamp-accentureone-acnonepm/src/3_evals/: __init__.py
DESIGN/agent-bootcamp-accentureone-acnonepm/agent-bootcamp-accentureone-acnonepm/src/3_evals/1_llm_judge/: README.md  run_eval.py
DESIGN/agent-bootcamp-accentureone-acnonepm/agent-bootcamp-accentureone-acnonepm/src/3_evals/2_synthetic_data/: README.md  synthesize_data.py
DESIGN/agent-bootcamp-accentureone-acnonepm/agent-bootcamp-accentureone-acnonepm/src/food_planner/: app.py  evaluate.py  food_agent.py
DESIGN/agent-bootcamp-accentureone-acnonepm/agent-bootcamp-accentureone-acnonepm/src/food_planner/eval_results/: trace_lists.csv
DESIGN/agent-bootcamp-accentureone-acnonepm/agent-bootcamp-accentureone-acnonepm/src/multi_agent_food_planner/: app.py  food_agent.py
DESIGN/agent-bootcamp-accentureone-acnonepm/agent-bootcamp-accentureone-acnonepm/src/utils/: client_manager.py  env_vars.py
DESIGN/agent-bootcamp-accentureone-acnonepm/agent-bootcamp-accentureone-acnonepm/src/utils/gradio/: __init__.py
DESIGN/agent-bootcamp-accentureone-acnonepm/agent-bootcamp-accentureone-acnonepm/tests/: README.md
DESIGN/agent-bootcamp-accentureone-acnonepm/agent-bootcamp-accentureone-acnonepm/tests/tool_tests/: test_gemini_grounding.py  test_integration.py  test_weaviate.py
EVALUATION/: README.md
EVALUATION/phase1/: README.md  smoke_test_food_planner.py  test_connections.py
EVALUATION/phase2/: README.md  food_planner_eval_ground_truth_0pct.json  food_planner_eval_ground_truth_100pct.json  food_planner_eval_ground_truth_25pct.json  food_planner_eval_ground_truth_50pct.json  food_planner_eval_ground_truth_75pct.json  langfuse_upload.py
EVALUATION/phase3/: README.md  run_evaluation.py
EVALUATION/phase4/: README.md  run_evaluation.ipynb  run_evaluation.py
EVALUATION/phase4/rubrics/: dietary_compliance.md  recipe_completeness.md  recipe_completeness_lenient.md  recipe_completeness_strict.md  serving_size.md  time_constraint.md
EVALUATION/phase5/: README.md  analyze_results.py  run_level_aggregator.py
EVALUATION/phase5/output-2/: analysis_report.md  results_detailed.csv  results_summary.csv
acn-agents/: .env.example  .gitignore  .typos.toml  mkdocs.yml  pyproject.toml
acn-agents/.github/workflows/: unit_tests.yml
acn-agents/docs/: index.md
acn-agents/src/1_basics/0_search_demo/: app.py
acn-agents/src/2_frameworks/: __init__.py
acn-agents/src/2_frameworks/2_multi_agent/: efficient.py
acn-agents/src/2_frameworks/4_mcp/: README.md
acn-agents/src/3_evals/1_llm_judge/: upload_data.py
acn-agents/src/3_evals/2_synthetic_data/: annotate_diversity.py  gradio_visualize_diversity.py
acn-agents/src/utils/: env_vars.py  logging.py  pretty_printing.py
acn-agents/src/utils/data/: pdf_to_hf_dataset.py
acn-agents/src/utils/langfuse/: oai_sdk_setup.py  otlp_env_setup.py  shared_client.py
acn-agents/src/utils/tools/: README.md  code_interpreter.py
acn-agents/src/utils/web_search/: .env.example  Dockerfile  daily_usage.py
acn-agents/tests/data_tests/: test_load_hf.py
acn-agents/tests/tool_tests/: test_get_news_events.py
acn-agents/tests/tool_tests/example_files/: example_a.csv
aieng-eval-agents/tests/aieng/agent_evals/knowledge_qa/: test_retry.py  test_token_tracker.py
food_planner/: app.py  evaluate.py  evaluate_utils.py  extract_cuisine_types.py  food_agent.py  langfuse_tool_calls_by_session.py
food_planner/eval_results/: culinary_agent_queries_200_with_ids_trace_lists.csv
implementations/aml_investigation/: 01_data_and_tools.ipynb  02_running_the_agent.ipynb
implementations/aml_investigation/data/: building-aml-eval-datasets.md
implementations/basics/: 02_evaluation_harness.ipynb
implementations/knowledge_qa/: 03_evaluation.ipynb
implementations/knowledge_qa/data/: building-qa-eval-datasets.md
implementations/report_generation/data/: building-qa-eval-datasets.md
multi_agent_food_planner/: app.py
src/: prompts.py
src/1_basics/: __init__.py
src/1_basics/0_search_demo/: README.md
src/1_basics/1_react_rag/: app.py
src/2_frameworks/1_react_rag/: langfuse_gradio.py
src/2_frameworks/2_multi_agent/: efficient_multiple_kbs.py
src/2_frameworks/3_code_interpreter/: README.md
src/2_frameworks/4_mcp/: app.py
src/3_evals/: README.md
src/3_evals/2_synthetic_data/: synthesize_data_e2b.py
src/utils/: __init__.py  agent_session.py  async_utils.py  client_manager.py  trees.py
src/utils/data/: __init__.py  batching.py  chunk_hf_dataset.py  load_dataset.py
src/utils/gradio/: messages.py
src/utils/langfuse/: trace_id.py
src/utils/tools/: news_events.py
src/utils/web_search/: .dockerignore  README.md  requirements_app.in
tests/: test_web_search_auth.py
tests/tool_tests/: test_code_interpreter.py
(+7 files in other folders)
